trying to fix buttons not working on mobile

--- a/sass/pages/booking/_form.scss
+++ b/sass/pages/booking/_form.scss
@@ -175,8 +175,8 @@
   &__operator {
     color: $color-primary;
     cursor: pointer;
-    padding: 1rem 0;
     transition: opacity 0.4s;
+    z-index: 10;
 
     &:hover {
       opacity: 0.5;
@@ -192,5 +192,6 @@
     border-color: $color-primary-black;
     padding-left: 0; // removing padding on sides - button's width is adjusted to the flex container
     padding-right: 0;
+    z-index: 10;
   }
 }
